# gen-ai-project

./: .gitignore  Cargo.toml  package.json  serverless.yml
.github/workflows/: gen-ai-workflow.yml
iac/api/: rest_api.yml  websocket_api.yml
iac/api/definitions/: crud.yml  queue_event.yml  queue_notification.yml
iac/api/schemas/: schema-messages.json
iac/cdn/: cdn.yml
iac/dynamo/: privateModel.yml
iac/lambda/: createIteminTable.yml  scrapper.yml  webscrapping.yml
iac/pipes/: genaiPipe.yml
iac/queues/: genaiQueue.yml
iac/s3/: content.yml  tables.yml
iac/states/: genaistate.yml  statesRole.yml  sumarize_flow.yml
src/llrt/scrapper/: package.json  scrapper.js
src/rs/: createitem copy.rs  createitem.rs  scrapperrs.rs  webscrapping.rs
