[package]
name = "multi-binary"
version = "0.1.0"
authors = ["manuel cheong <mcheong@soaint.com>"]
edition = "2021"

[[bin]]
name = "createitem"
path = "src/rs/createitem.rs"


[[bin]]
name = "webscrapping"
path = "src/rs/webscrapping.rs"


[dependencies]
lambda_runtime = "0.8"
rayon = "1.7"
reqwest = { version = "0.11", features = ["native-tls-vendored"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }



[profile.release]
strip = true
lto = true


