[package]
name = "multi-binary"
version = "0.1.0"
authors = ["manuel cheong <mcheong@soaint.com>"]
edition = "2021"

[[bin]]
name = "createitem"
path = "src/rs/createitem.rs"

[dependencies]
lambda_runtime = "0.8"
rayon = "1.7"
reqwest = { version = "0.11", features = ["native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }



[profile.release]
strip = true
lto = true


