[package]
name = "multi-binary"
version = "0.1.0"
authors = ["manuel cheong <mcheong@soaint.com>"]
edition = "2021"

[[bin]]
name = "createitem"
path = "src/rs/createitem.rs"

[[bin]]
name = "scrapperrs"
path = "src/rs/scrapperrs.rs"

[dependencies]
futures-util = "0.3.31"
lambda_runtime = "0.8"
reqwest = { version = "0.11", features = ["native-tls-vendored", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
aws-config = {version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

[profile.release]
strip = true
lto = true


